[package]
name = "pcap-async"
edition = "2018"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.3"
license = "MIT"
readme = "README.md"
description = """
Async/Stream Extensions for libpcap
"""
authors = ["Danny Browning <bdbrowning2@gmail.com>"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/pcap-async/"
repository = "https://github.com/dbcfd/pcap-async"

[dependencies]
byteorder = "1.3"
failure = "0.1"
futures = "0.3"
libc = "0.2"
log = "0.4"
pin-project = "0.4"
pcap-sys = "0.1"
tokio = { version = "0.2", features = ["blocking", "rt-threaded", "time"] }

[dev-dependencies]
criterion = "0.2"
env_logger = "0.6"
tokio = { version = "0.2", features = ["macros", "rt-core"] }

[lib]
path = "src/lib.rs"

[[bench]]
path = "benches/bench_capture.rs"
name = "bench_capture"
harness = false
