[package]
name = "pcap-async"
edition = "2018"
# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.4.0"
license = "MIT"
readme = "README.md"
description = """
Async/Stream Extensions for libpcap
"""
authors = ["dbcfd <bdbrowning2@gmail.com>", "Ben Kornmeier <ben@kornstar.net>"]
categories = ["asynchronous", "network-programming"]
documentation = "https://docs.rs/pcap-async/"
repository = "https://github.com/dbcfd/pcap-async"
exclude = ["resources/*.pcap"]

[dependencies]
byteorder = "1.3"
futures = "0.3"
libc = "0.2"
log = "0.4"
mio = "0.6"
pin-project = "0.4"
pcap-sys = "0.1"
smol = "1.2"
thiserror = "1.0"

[dev-dependencies]
rand = "0.3"
criterion = "0.2"
env_logger = "0.6"

[lib]
path = "src/lib.rs"

[[bench]]
path = "benches/bench_capture.rs"
name = "bench_capture"
harness = false
